Add faker global styles and example scope

--- a/example/index.html
+++ b/example/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Simple React</title>
+  <title>Formcat | A simple way to handle forms in React</title>
 </head>
 <body>
   <section id="main"></section>
